--- a/css/login.css
+++ b/css/login.css
@@ -24,15 +24,15 @@ h1 {
 
 .container {
     font-family:  sans-serif;
-    border: 5px solid #F07334;
+    border: 5px solid  black;
     margin-top: 200px;
     margin-left: 170px;
     width: 75%;
     height: 400px;
 	text-align:  center;
-	border-radius: 12px;
-	background-color: yellow;
-	padding-bottom: 10px;
+	border-radius: 16px;
+	background-color: lightgrey;
+	padding-bottom: 20px;
 	-webkit-box-shadow: 3px 0px 10px 0px black;
 	-moz-box-shadow: 3px 0px 10px 0px black;
 	box-shadow: 3px 0px 10px 0px black;
@@ -42,7 +42,7 @@ h1 {
 .submit {
 	background-color: grey;
 	color: black;
-	border: 1px solid black;
+	border: 4px solid black;
     width: 140px;
     height: 50px;
 	font-family: sans-serif;
@@ -54,6 +54,7 @@ h1 {
 .password, .username {
 width: 350px;
 height: 40px;
+font-size: 20px;
 
 }
 
